@@ -1,3 +1,9 @@
+2009-03-20  Callum McKenzie  <callum@spooky-possum.org>
+
+	* drive-button.c: Check that we get a valid response from gconf
+	when asking for the play command. Bug 340410.  Also avoid a crash
+	when no icons can be found.
+
 ==================== 2.26.0 ======================
 
 ==================== 2.25.92 ======================
